--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://kit.fontawesome.com/d97b87339f.js" crossorigin="anonymous"></script>
 </body>
 </html>
